--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -128,23 +128,28 @@ tests:
   - script: |
       cd testing
       python run_complex_tests.py
+    requirements: {run: [postgresql 18.*, "python ${{ python_min }}.*"]}
+    files: {source: [tests.tar, web/regression/], recipe: [testing/]}
+  - script: |
+      cd testing
+      python run_complex_tests.py
     requirements: {run: [postgresql 17.*, "python ${{ python_min }}.*"]}
     files: {source: [tests.tar, web/regression/], recipe: [testing/]}
-  - script: |
-      cd testing
-      python run_complex_tests.py
-    requirements: {run: [postgresql 16.*, "python ${{ python_min }}.*"]}
-    files: {source: [tests.tar, web/regression/], recipe: [testing/]}
-  - script: |
-      cd testing
-      python run_complex_tests.py
-    requirements: {run: [postgresql 15.*, "python ${{ python_min }}.*"]}
-    files: {source: [tests.tar, web/regression/], recipe: [testing/]}
-  - script: |
-      cd testing
-      python run_complex_tests.py
-    requirements: {run: [postgresql 14.*, "python ${{ python_min }}.*"]}
-    files: {source: [tests.tar, web/regression/], recipe: [testing/]}
+  # - script: |
+  #     cd testing
+  #     python run_complex_tests.py
+  #   requirements: {run: [postgresql 16.*, "python ${{ python_min }}.*"]}
+  #   files: {source: [tests.tar, web/regression/], recipe: [testing/]}
+  # - script: |
+  #     cd testing
+  #     python run_complex_tests.py
+  #   requirements: {run: [postgresql 15.*, "python ${{ python_min }}.*"]}
+  #   files: {source: [tests.tar, web/regression/], recipe: [testing/]}
+  # - script: |
+  #     cd testing
+  #     python run_complex_tests.py
+  #   requirements: {run: [postgresql 14.*, "python ${{ python_min }}.*"]}
+  #  files: {source: [tests.tar, web/regression/], recipe: [testing/]}
 
   # This seems incompatible with psycopg
   # - script: PY_VER=${{ python_min }} ./test.sh
