--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -25,7 +25,7 @@ build:
 
 requirements:
   build:
-    - {{ compiler("cxx") }}
+    - ${{ compiler("cxx") }}
     - make
   host:
     - Flask 3.1.*
