--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -14,6 +14,7 @@ source:
     patches:
       - patch-package.json.patch
       - conda-compliant-requirements.txt.patch
+      - patches/add-use-effect-event-polyfill.patch
 
 build:
   number: 0
