(fix) React unsupported useEffectEvent

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -15,6 +15,7 @@ source:
       - patch-package.json.patch
       - conda-compliant-requirements.txt.patch
       - add-use-effect-event-polyfill.patch
+      - optimize-terser-memory.patch
 
 build:
   number: 0
